--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
 				"scopeName": "source.ooc",
 				"path": "./syntaxes/ooc.json"
 			}
+		],
+		"snippets": [
+			{
+				"language": "ooc",
+				"scopeName": "source.ooc",
+				"path": "./snippets/ooc.json"
+			}
 		]
 	}
 }
